--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     <div id="image-placeholder" class="flex flex-col items-center justify-center gap-4 py-6 sm:py-10">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-slate-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" /></svg>
                         <div class="flex flex-col gap-2">
-                            <label for="image-uploader" class="cursor-pointer text-white font-bold py-2 px-4 rounded-lg transition duration-300 shadow-md" style="background-color: #e82011;">Upload a Pic</label>
-                            <button id="show-search-modal-btn" class="text-white font-bold py-2 px-4 rounded-lg transition duration-300 shadow-md" style="background-color: #0f61e6;">Find an Image</button>
+                            <label for="image-uploader" class="cursor-pointer text-white font-bold py-2 px-4 rounded-lg transition duration-300 shadow-md" style="background-color: #b9965b;">Upload a Pic</label>
+                            <button id="show-search-modal-btn" class="text-white font-bold py-2 px-4 rounded-lg transition duration-300 shadow-md" style="background-color: #212529;">Find an Image</button>
                         </div>
                     </div>
                     <input type="file" id="image-uploader" accept="image/*" class="hidden"/>
