--- a/success.html
+++ b/success.html
@@ -21,13 +21,13 @@
         </svg>
         <h1 class="text-2xl font-bold text-[#0E0B3D] mb-2">Success!</h1>
         <p class="text-gray-600 mb-6">Hope you're having a great holiday.</p>
-        <a href="/?sendAgain=true" class="w-full inline-block text-white font-bold py-3 px-4 rounded-lg transition duration-300 shadow-md mb-6" style="background-color: #0f61e6;">
+        <a href="/?sendAgain=true" class="w-full inline-block text-white font-bold py-3 px-4 rounded-lg transition duration-300 shadow-md mb-6" style="background-color: #212529;">
             Send again, to someone else?
         </a>
         
         <p class="text-gray-600">Luxury Cruise Holidays in 2026 - Sale extended to 22nd September</p>
         <a href="https://www.sixstarcruises.co.uk/" target="_blank">
-            <img src="sixstars.png" alt="Six Starrt Cruises Logo" class="mx-auto mt-2">
+            <img src="sixstars.png" alt="SixStartCruises Logo" class="mx-auto mt-2">
         </a>
     </div>
 
