--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                              <div class="aspect-[210/148] bg-gray-200 rounded-lg shadow-md relative"><img id="final-preview-back" class="w-full h-full object-cover rounded-lg cursor-pointer"></div>
                         </div>
                     </div>
-                    <button id="send-postcard-btn" class="w-full mt-6 text-white font-bold py-3 px-4 rounded-lg transition duration-300 shadow-md flex items-center justify-center gap-2" style="background-color: #0f61e6;"><span class="btn-text">Send Postcard</span></button>
+                    <button id="send-postcard-btn" class="w-full mt-6 text-white font-bold py-3 px-4 rounded-lg transition duration-300 shadow-md flex items-center justify-center gap-2" style="background-color: #212529;"><span class="btn-text">Send Postcard</span></button>
                 </div>
             </div>
         </main>
