--- a/success.html
+++ b/success.html
@@ -25,7 +25,7 @@
             Send again, to someone else?
         </a>
         
-        <p class="text-gray-600">Luxury Cruise Holidays in 2026 - Sale extended to 22nd September</p>
+        <p class="text-gray-600">Savings Event: Book next year with savings of up to 40% and Free Business Class Flights</p>
         <a href="https://www.sixstarcruises.co.uk/" target="_blank">
             <img src="sixstars.png" alt="SixStartCruises Logo" class="mx-auto mt-2">
         </a>
